# FinalYearProject

./: .gitattributes  .gitignore  .gitmodules  Makefile  README.md  docker-compose.yml  flake.nix  frames_2025-01-13_17.46.42.gv  frames_2025-04-29_04.54.52.gv  install_dependencies.sh  launch.zsh  map_save_serial.data  pixi.toml  start.sh
.devcontainer/: devcontainer.json  docker-compose.yml
a_star/a_star/: a_star_node.py
docker/: Dockerfile  README.md  build-docker.sh  connect-docker.sh  custom_bashrc  docker-compose.yml  entrypoint.sh  workspace.sh
ekf/: CMakeLists.txt  package.xml
ekf/include/: ekf.h
ekf/src/: ekf.cpp
hospital-api/: README.md  bun.lockb  package.json
hospital-api/prisma/: schema.prisma
hospital-api/prisma/migrations/20250203043528_init/: migration.sql
hospital-api/src/: index.ts
hospital-api/src/controllers/: patient.ts
hospital-api/src/lib/: schemas.ts
hospital-api/src/repository/: patient.ts
hospital-api/src/routes/: index.ts  patient.ts
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/diffdrive_arduino/share/diffdrive_arduino/: diffdrive_arduino.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
install/helper_nodes/lib/helper_nodes/: cmd_vel_handler
install/helper_nodes/share/helper_nodes/: package.bash  package.dsv  (+4 more)
launch/: launch.zsh
localisation_planning/: CMakeLists.txt  package.xml
localisation_planning/include/: ekf.h  icp.h
localisation_planning/src/: debug_laser_scan_publisher.cpp  ekf_slam.cpp  icp.cpp  laser_scan_handler_node.cpp
log/: latest_build
media/: imx477__base_axi_pcie_120000_rp1_i2c_80000_imx477_1a_800x600.yaml
odometry/: CMakeLists.txt
odometry/include/: icp.h  laser_scan_handler.h
odometry/src/: debug_laser_scan_publisher.cpp  icp.cpp  laser_scan_handler.cpp  publisher_member_function.cpp
report/: factsheet.sty  references.bib  report_template.aux  report_template.bbl  report_template.bcf  report_template.blg  report_template.fdb_latexmk  report_template.fls  report_template.out  report_template.run.xml  report_template.tex  report_template.toc
robot/: package.xml
robot/description/: robot.urdf.xacro  robot_core.xacro
robot/launch/: launch_sim.launch.py  rsp.launch.py
robot/worlds/: obstacles.world
runs/detect/train/: args.yaml  results.csv
runs/detect/train2/: args.yaml  results.csv
sam_bot_description/config/: nav2_params.yaml
sam_bot_description/rviz/: urdf_config.rviz
serial_motor_demo/serial_motor_demo/serial_motor_demo/: driver.py  terminal_control.py
serial_motor_demo/serial_motor_demo_msgs/: CMakeLists.txt
slam/: package.xml
slam_ekf/: package.xml
slam_ekf/slam_ekf/: slam_ekf_node.py  util.py
src/a_star/: package.xml  setup.py
src/a_star/a_star/: a_star_node.py
src/camera/: package.xml  setup.py
src/camera/camera/: camera.py
src/camera_handler/: package.xml  setup.py
src/camera_handler/camera_handler/: distortion_normalizer.py  recognition_utils.py  utils.py  video_publisher_node.py
src/camera_handler/srv/: TriggerImage.srv  TriggerImageRecognition.srv
src/camera_interface/: CMakeLists.txt  package.xml
src/camera_interface/msg/: ImageTimestamp.msg
src/camera_interface/srv/: PublishImage.srv
src/control_node/: package.xml  setup.py
src/cv/: bytetracker.ipynb  flake.nix  reid.ipynb  requirements.txt  test_embeddings.pkl  yolo.ipynb
src/cv/data/: test2_embeddings.pkl  test3_embeddings.pkl
src/db/: package.xml  setup.py
src/db/db/: Patient.py  SQLite.py  Table.py  db.py  fyp.db
src/face_recog/: README.md  package.xml  setup.py
src/face_recog/face_recog/: dispenser.py  embeddings.json  embeddingsDistance.py  embeddingsTiny.json  face_recog.py  face_recognition_node_yolo.py  gpio_node.py  train_face_embeddings_yolo.py
src/face_recognition_pkg/: package.xml  setup.py
src/face_recognition_pkg/face_recognition_pkg/: face_recognition_node.py
src/facial_recognition/: calibration_data.npz  distortion_normalizer.py  facial_recognition_node.py  lens_undistorter.ipynb
src/gpio_handler/: package.xml  setup.cfg  setup.py
src/gpio_handler/gpio_handler/: gpio_node.py
src/gpio_interface/: CMakeLists.txt  package.xml
src/gpio_interface/msg/: GpioCmd.msg  ServoCmd.msg
src/gpio_interface/srv/: GpioInit.srv  GpioSet.srv  ServoInit.srv  ServoSet.srv
src/helper_nodes/: package.xml  setup.py
src/helper_nodes/helper_nodes/: cmd_vel_handler.py
src/medicine_dispenser/: package.xml  setup.cfg  setup.py
src/medicine_dispenser/medicine_dispenser/: __init__.py  dispenser.py  medicine_dispenser.py  medicines.yaml
src/odometry/: CMakeLists.txt  package.xml
src/odometry/src/: debug_laser_scan_publisher.cpp  icp.cpp
src/robot/description/: lidar.xacro  robot.urdf.xacro  robot_core.xacro
src/robot/launch/: launch_sim.launch.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/config/: gazebo_params.yaml  mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml  twist_mux.yaml
src/robot_description/launch/: display.launch.py  launch_robot.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  rsp.launch.py  sim.launch.py  viz.launch.py
src/robot_description/rviz/: urdf_config.rviz
src/robot_description/world/: map.sdf  map.world
src/sam_bot_description/launch/: display.launch.py  viz.launch.py
src/sam_bot_description/rviz/: urdf_config.rviz
src/serial_motor_demo/serial_motor_demo/: package.xml
src/slam_ekf/: package.xml  setup.py
src/slam_ekf/slam_ekf/: slam_ekf_node.py  util.py
src/twistHandler/: package.xml  setup.cfg  setup.py
src/twistHandler/twistHandler/: twistHandler.py
src/twist_handler/: package.xml  setup.cfg  setup.py
src/twist_handler/twist_handler/: twist_handler.py
src/uwb/: package.xml  setup.py
src/uwb/uwb/: Field.py  Filter.py  Message.py  NavBridge.py  PoseTransformer.py  Serial.py  SerialAsync.py  SerialMT.py  uwb.py  uwb_async.py
tmp/: my_controllers.yaml
(+120 files in other folders)
